CSS/style.css
/* GLOBAL */
html, body{
    max-width: 1400px;
    margin: 0 auto;
    padding: 0;
    font-family: 'Raleway', sans-serif;
}

h1, h2, h3{
    font-size: 22px;
    font-weight: 800;
}

.d-flex{
    display: flex;
}

.flex-row{
    flex-direction: row;
}

.flex-col{
    flex-direction: column;
}

.justify-left{
    justify-content: left;
}

.justify-right{
    justify-content: right;
}

.justify-center{
    justify-content: center;
}

.justify-between{
    justify-content: space-between;
}

.txt-16{
    font-size: 16px;
}

.txt-14{
    font-size: 14px;
}

.wght-7{
    font-weight: 700;
}

.m-0{
    margin: 0;
}

.w-100{
    width: 100%;
}

.h-100{
    height: 100%;
}

a{
    text-decoration: none;
    color: black;
}

.header, #main, footer{
    padding: 0 50px 0;
}


/* HEADER */
.header{
    margin-bottom: 63px;
}

.logo{
    margin: 48px 0 0;
    width: 4em;
    object-fit: contain;
}

.header > nav{
    margin-right: 0;
}

.nav-link{
    text-align: center;
    border-top: 2px solid transparent;
    padding: 48px 20px 0;
    list-style: none;
}

.nav-link:hover {
    border-top: 2px solid #0065FC;
    cursor: pointer;
}

.nav-link:hover > a{
    color: #0065FC;
    cursor: pointer;
}

/* FOOTER */
.footer-container{
    background-color: #F2F2F2;
    padding: 45px 0 58px 65px;
}

.footer-container > ul {
    width: 33%;
    padding: 0;
    list-style-type: none;
}

.footer-container > ul > li:first-of-type {
    font-size: 18px;
    font-weight: 800;
}

.footer-container > ul > li{
    margin: 1rem 0 0 0;
}


.show-more-txt {
    margin-top: 8px;
}

/* SEARCH-FILTER*/
.search-container{
    margin: 20px 0 35px 0;
    width: 100%;
    height: 49px;
    border-radius: 15px;
    display: inline-flex;
}

.search-container > i{
    font-size: 20px;
    width: 30px;
    background-color: #F2F2F2;
    border-radius: 16px 0 0 16px;
    height: 36px;
    padding-top: 13px;
    display: block;
    padding-left: 20px;
}

.search-container > button{
    width: 132px;
    height: 49px;
    margin: 0;
    border-radius: 0 15px 15px 0;
    background-color: #0065FC;
    color: white;
    border: none;
    cursor: pointer;
    font-size: 18px;
}

.search-container > button > i{
    display: none;
}

.search-container > input{
    left: 60px;
    width: 230px;
    height: 46px;
    border: 1px solid #F2F2F2;
    padding-left: 1rem;
}

.search-container > input:focus{
    outline: none;
}

.search-container > button:hover{
    cursor: pointer;
}

.filters-title{
    margin: 0 2% 0 0;
    font-size: 18px;
    padding-top: 12px;
}

.filters-btn-container > button{
    margin: 0 30px 0 0;
    font-size: 17px;
    background-color: white;
    border: 2px solid #d9d9d9;
    border-radius: 50px;
    padding: 10px 12px 10px;
}

.filters-btn-container > button:hover{
    background-color: #DEEBFF;
    transition: 0.3s ease;
    cursor: pointer;
}


.filters-btn-container > button > i{
    color: #0065FC;
    margin: 2px 6px 0 0;
    font-size: 17px;
 }

.info-container{
    margin: 40px 0 40px;
}

.info-container > div{
    margin: 0;
    width: 21px;
    height: 21px;
    border-radius: 50px;
    border: 1px solid #d9d9d9;
    position: relative;
}

.info-container > p{
    margin: 3px 0 0 10px;
}
 
.fa-info{
    color: #0065FC;
    margin: 0;
    font-size: 11px;
    position: absolute;
    right: 39%;
    bottom: 27%;
}


/* LODGING-ALL */
#lodging-all{
    flex-grow: 2;
}

#lodging-pop{
    flex-grow: 1;
}

.accommodations, .populars{
    background-color: #F2F2F2;
    border-radius: 20px;
}

.accommodations{
    padding: 42px 40px 0px;
    margin-right: 3%;
}

.accommodations > p {
    margin: 40px 0 0 0;
    font-size: 18px;
}

.card-grid{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 31px;
    margin: 26px 0 0;
}

.accommodation-card{
    padding: 4px 4px 11px 4px;
    height:199px;
}

.accommodation-card-img{
    max-height:124px;
    object-fit: cover;
    border-radius: 20px 20px 0 0;
}

.card{
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    border-radius: 20px;
}

.card:hover{
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    cursor: pointer;
}

.txt-container{
    margin: 0 0 0 4%;
    max-height: 76px;
    justify-content: space-evenly;
}

.stars-container{
    font-size: 12px;
    color: #0065FC;
}

.stars-container > i:last-of-type{
    color: #F2F2F2;
}

.populars{
    padding: 41px 35px 0px;
}

.fa-chart-line{
    color: #0065FC;
    margin: 5px 0 0 0;
}

.populars-cards-container{
    max-width: 350px;
    margin-top: 26px;
}

.popular-card{
    height: 144px;
    padding: 4px;
    margin-bottom: 33px;
}

.popular-card-img{
    width:33%; 
    max-height: 144px;
    min-width: 115px;
    object-fit: cover;
    border-radius: 20px 0 0 20px;
    margin: 0;
}

.popular-txt{
    padding: 15px 16px 12px 22px;
    max-height: 128px;
}


 /* ACTIVITIES */
.activities-container{
    margin-top: 1.5rem;
    margin-bottom: 80px;
}

.activities-container > article{
    width: 23%;
}

.activity-card{
    max-height: 445px;
    cursor: pointer;
}

.activity-card-img{
    border-radius: 20px 20px 0 0;
    height: 87%;
    object-fit: cover;
}

.activity-txt-wrapper{
    height: 56px;
}

.activity-txt{
    margin: 0 1rem 0;
}



/* tablet */
@media screen and (max-width: 992px) and (min-width: 768px) {

    #main{
        padding: 0 70px 0 70px;
    }

     /* search-filter */
    .filters-title{
        margin-right: 0;  
    }
  
    .filters-btn-container{
        flex-wrap: wrap;
    }

    .filters-btn-container > button{
        margin: 0 0 0 3px;  
        padding: 10px 3px 10px;
    }

    /* lodging */
    
    .lodging-container{
        flex-direction: column;
    }

    #lodging-all{
        flex-direction: column;
        justify-content: center;
    }

    .accommodations{
        padding-bottom: 46px;
        margin-right: 0;
        width: 100%;
    }

    .populars{
        margin-top: 34px;
        width: 100%;
        padding-bottom: 48px;
    }

    .populars-cards-container{
        flex-direction: row;
        justify-content: space-between;
        max-width: fit-content;
    }

    .populars-cards-container > article{
        width: 31%;
    }

    .popular-card{
        max-width: 252px;
        height: 144px;
        margin-bottom : 0px;
        width: 100%;
    }

    .popular-card-img{
        width: 29%;
        min-width: 50px;
        object-fit: cover;
    }

    .popular-txt{
        padding: 8px 0px 10px 10px;
    }

    .popular-txt > div > p{
        font-size: 13px;
    }


    /* activities */
    #activities{
        margin-top: 76px;
    }

    .activity-card{
        max-height: 267px;
    }

    .activity-card-img{
        max-height: 211px;
    }
}


/* phone */
@media screen and (max-width: 768px) {

    
    .header, #main{
        padding: 0;
    }


    /* header*/
    .header{
        width: 100%;
        flex-direction: column;
        justify-content: center;
    } 

    .logo{
        margin: 48px auto;
    }

    .header > nav{
        width: 100%;
    }

    .header > nav > ul{
      padding-left: 0;
    }

    .header > nav > ul > li{
        width: 100%;
        border-top: none;
        border-bottom: 3px solid transparent;
        padding-bottom: 20px;
    }

    .header > nav > ul > li:hover{
        border-top: none;
        color: #0065FC;
        border-bottom: 3px solid #0065FC;
    }


    /* footer*/
    footer{
        padding: 0;
    }

    .footer-container{
        flex-direction: column;
        padding-top: 0;
    }

    .footer-container > ul {
        margin-top: 2rem;
        width: 100%;
    }


    /* search-filter */
    #search-filter{
        width: auto;
        padding: 0 20px 0;
    }

    .search-container{
        width: 100%;
        margin: 36px auto 34px auto;
    }

    .search-container > i{
        min-width: 30px;
    }

    .search-container > input{
        width: 100%;
    }

    .search-container > button{
        width: 50px;
        margin: 0;
        font-size: 16px;
    }

    .search-container > button > span{
        display: none;
    }
    
    .search-container > button > i{
        display: block;
        padding-right: 4px;
        color: white;
        width: 36px;
    }

    .filters-container{
        flex-direction: column;
    }

    .filters-title {
        margin: 0 0 1rem 0;
    }

    .filters-btn-container{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 10px;
    }

    .filters-btn-container > button{
        padding: 20px 12px 20px;
        justify-content: left;
        font-size: 11px;
        width: 160px;
        height: 50px;
        margin: 0 auto;
    }

    .filters-btn-container > button > i{
        margin-top: -3px;
    }

    .fa-info{
        -webkit-text-stroke: 1px #0065FC;
    }


    /* lodging */
    .lodging-container{
        flex-direction: column-reverse;
        padding: 0;
    }

    .accommodations, .populars{
        border-radius: 0;
    }

    .accommodations{
        background-color: white;
        padding: 0;
        margin: 26px 20px 0 20px;
    }
    
    .accommodations > p{
        display: none;
    }

    .accommodations-container{
        width: 100%;
        flex-direction: column-reverse;
    }


    #lodging-pop{
        justify-content: center;
    }

    .populars{
        width: 100%;
    }

    .populars-cards-container{
        max-width: 100%;
    }

    
    /* activities */
    #activities{
        padding: 0 20px 0 20px;
        margin-top: 4rem;
    }

    .activities-container{
        width: 100%;
        flex-direction: column;
        justify-content: space-around;
    }

    .activities-container > article{
        width: 100%;
    }

    .activity-card{
        width: 100%;
        margin-top: 24px;
    }

    .activity-card-img{
        max-height: 134px;
    }

    .card-grid{
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
}

